force-app/main/default/objects/rectangle__c/rectangle__c.object-meta.xml
<CustomObject>
    <label>rectangle</label>
    <nameField>
        <label>rectangle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>rectangles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>