force-app/main/default/objects/rectangle__c/fields/area_of_rectangle__c.field-meta.xml
<CustomField>
    <fullName>area_of_rectangle__c</fullName>
    <formula>length__c * breadth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>area of rectangle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>