force-app/main/default/objects/rectangle__c/fields/breadth__c.field-meta.xml
<CustomField>
    <fullName>breadth__c</fullName>
    <label>breadth</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>