force-app/main/default/objects/rectangle__c/fields/length__c.field-meta.xml
<CustomField>
    <fullName>length__c</fullName>
    <label>length</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>