force-app/main/default/objects/rectangle__c/fields/perimeter_of_triangle__c.field-meta.xml
<CustomField>
    <fullName>perimeter_of_triangle__c</fullName>
    <formula>2*( breadth__c + length__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>perimeter of triangle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>